--- a/styles/style.css
+++ b/styles/style.css
@@ -78,3 +78,90 @@ header{
     margin-top: 25px;
     margin-bottom: 25px;
 }
+
+/* menu start l*/
+.menuvaag{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 85px;
+}
+
+.menufirst{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-row-gap: 15px;
+    grid-column-gap: 15px;
+    margin-left: 100px;
+
+}
+
+.menusecond{
+    margin-left: 100px;
+}
+
+.one{
+    opacity: .3;
+}
+.two{
+    font-size: larger;
+    font-weight: 1000;
+}
+.three{
+    color: orange;
+    font-size: larger;
+    font-weight: 1000;
+}
+
+.menusecondpara{
+    margin-top: 13px;
+    margin-bottom: 15px;
+}
+
+/* feature & Experience */
+
+.feaexp{
+    display: flex;
+    margin-left: 200px;margin-top: 80px;
+}
+
+.features{
+    margin-right: 80px;
+}
+
+.featurehorizontal{
+    border: none;
+    border-left: 5px solid orange;
+}
+
+.feature-1{
+    margin-bottom: 15px;   
+}
+.feature-1-para{
+    margin-top: 5px;
+}
+
+.feature-2{
+  width: 450px;
+  height: 120px;
+  padding: 15px;
+  background-color: white;
+  box-shadow: 10px 10px 10px whitesmoke;
+  margin-bottom: 15px;
+  padding: 0;
+  border: 2px solid whitesmoke;
+  padding: 10px;
+}
+
+.feature-2-header{
+    margin-bottom: 8px;
+}
+
+
+.exprncimg{
+    height: 674px;
+}
+
+.rafi{
+    margin-left: 15px;
+}
