--- a/styles/style.css
+++ b/styles/style.css
@@ -184,3 +184,37 @@ header{
     margin-left: -40px;
     margin-top: 610px;
 }
+
+.somefacts{
+    position: relative;
+    margin-top: 900px;
+}
+
+
+.somefactspara{
+    padding:15px;
+    margin-left: 195px;
+}
+
+.somefatcsheader{
+    margin-bottom: 15px;
+}
+
+.somefactsicons{
+    margin-top: 45px;
+    display: grid;
+    grid-template-columns: repeat(4,200px);
+    margin-left: 300px;
+    grid-column-gap: 100px;
+}
+
+.icons-1{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    border: 2px solid orange;
+    height: 150px;
+    width: 150px;
+}
