--- a/styles/style.css
+++ b/styles/style.css
@@ -335,7 +335,8 @@ footer{
     }
 
     .menusecond{
-        width: 400px;
+        width: 100%;
+        margin-left: 0px;    
     }
 
     .menusecondpara{
@@ -368,7 +369,7 @@ footer{
 
     .menufirst{
         grid-template-columns: repeat(1,1fr);
-        margin-left: 0px;
+        margin-left: 10px;
 
     }
 
@@ -427,6 +428,7 @@ footer{
 
     .feaexpbtn{
         margin-top: -55px;
+        margin-left: -30px;
     }
 
 
@@ -471,6 +473,10 @@ footer{
         margin-left: -250px;
         margin-top: -45px;
         width: 340px;
+    }
+
+    .oursponsors{
+        padding: 6px;
     }
 
     .sponsoricon{
