--- a/styles/style.css
+++ b/styles/style.css
@@ -316,7 +316,7 @@ footer{
     } 
     .navarchi h2{
         margin-right: 50px;
-        margin-left: -40px;
+        margin-left: -20px;
     }
     .navmenu{
         margin-left: 35px;
@@ -340,7 +340,8 @@ footer{
     }
 
     .menusecondpara{
-        margin-left: -15px;
+        width: 100%;
+        margin-left: -10px;
     }
 
     .three , .one{
@@ -368,13 +369,14 @@ footer{
     }
 
     .menufirst{
+        width: 100%;
         grid-template-columns: repeat(1,1fr);
         margin-left: 10px;
 
     }
 
     .menusecond{
-        /* margin-left: 30px; */
+        margin-left: 30px;
         margin-top: 15px;
     }
 
