--- a/styles/style.css
+++ b/styles/style.css
@@ -307,7 +307,9 @@ footer{
 }
 
 
-/* media */
+/* media ---------------------------------------------------
+----------------------------------------------------------
+------------------------------------------------------*/
 @media only screen and (max-width:688px){
     body{
         /* width: 100%; */
@@ -345,7 +347,7 @@ footer{
     }
 
     .three , .one{
-        margin-left: -16px;
+        margin-left: 5px;
     }
 
     .navbar{
