--- a/styles/style.css
+++ b/styles/style.css
@@ -478,12 +478,13 @@ footer{
 
     .architecture{
         grid-template-columns: repeat(1,1fr);
+        grid-row-gap: 10px;
         
     }
 
     .architectimages{
         margin-left: -250px;
-        margin-top: -45px;
+        margin-top: 0px;
         width: 340px;
     }
 
